# BitTokens

./: .gitignore  CITATION.cff  LICENSE  README.md  analyze_token_counts.py  bittokens.ipynb  bittokens_notebook.ipynb  bittokens_notebook.py  eval.py  init_sweep.py  pyproject.toml  requirements.txt  train.py
configs/: config_FoNE_multiTask.py  config_FoNE_multiTask_binary.py  config_FoNE_multiTask_float32.py  config_FoNE_multiTask_hard.py  config_FoNE_multiTask_hard_float32.py  config_FoNE_soloTask.py  config_FoNE_soloTask_dynamic.py  config_base10_multiTask.py  config_base10_multiTask_hard.py  config_base10_soloTask.py  config_bittoken_multiTask.py  config_bittoken_multiTask_float32.py  config_bittoken_multiTask_hard.py  config_bittoken_multiTask_hard_float32.py  config_bittoken_soloTask.py  config_bittoken_soloTask_dynamic.py  config_fe_multiTask.py  config_fe_multiTask_float32.py  config_fe_multiTask_hard.py  config_fe_multiTask_hard_float32.py  config_fe_soloTask.py  config_fe_soloTask_dynamic.py  config_sd_multiTask.py  config_sd_multiTask_binary.py  config_sd_multiTask_float32.py  config_sd_multiTask_hard.py  config_sd_multiTask_hard_float32.py  config_sd_soloTask.py  config_sd_soloTask_dynamic.py  config_td_multiTask.py  config_td_multiTask_binary.py  config_td_multiTask_float32.py  config_td_multiTask_hard.py  config_td_multiTask_hard_float32.py  config_td_soloTask.py  config_td_soloTask_dynamic.py  config_xVal_multiTask.py  config_xVal_multiTask_binary.py  config_xVal_multiTask_float32.py  config_xVal_multiTask_hard.py  (+3 more)
data_generation/: data_gen_utils.py  (+7 more)
(+200 files in other folders)
